Fixing aos cutting through header on ios

--- a/src/app/main-page/main-page.component.scss
+++ b/src/app/main-page/main-page.component.scss
@@ -33,6 +33,16 @@ header{
     top: 0;
     width: 100%;
     z-index: 99;
+} 
+
+[data-aos] {
+    pointer-events: none;
+}
+.aos-animate {
+    pointer-events: auto;
+}
+.aos-init[data-aos][data-aos].aos-animate {
+    transform: unset;
 }
 
 .divider-line{
